--- a/src/components/Box.scss
+++ b/src/components/Box.scss
@@ -1,7 +1,7 @@
 .Box {
   border: 1px solid #333;
   border-radius: 5px;
-  width: 300px;
+  width: 400px;
   margin-bottom: 5px;
 }
 .Box-header {
@@ -16,6 +16,33 @@
 .Box-header, .Box-content {
   padding: 5px 10px;
 }
-.Control-right-label {
-  margin-left: 6px;
+input {
+  font-size: 1.2em;
+}
+.Input-addon {
+  display: flex;
+  margin-bottom: 1em;
+}
+.Input-addon-field {
+  flex: 1;
+}
+.Input-addon-field:not(:first-child) {
+  border-left: 0;
+}
+.Input-addon-field:not(:last-child) {
+  border-right: 0;
+}
+.Input-addon-item {
+  background-color: rgba(147, 128, 108, 0.1);
+  color: #666;
+}
+.Input-addon-field, .Input-addon-item {
+  border: 1px solid rgba(147, 128, 108, 0.25);
+  padding: 0.25em 0.5em;
+}
+.Input-addon-field:first-child, .Input-addon-item:first-child {
+  border-radius: 2px 0 0 2px;
+}
+.Input-addon-field:last-child, .Input-addon-item:last-child {
+  border-radius: 0 2px 2px 0;
 }
